[package]
name = "zto"
version = "0.1.0"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]

[dependencies]
clap = { version = "2.27", features = ["yaml"] }
hyper = "^0.11"
tokio-core = "^0.1"
tokio-io = "^0.1"
futures = "^0.1"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
reqwest = "^0.8"
prettytable-rs = "^0.6"
